--- a/TestXIB/ViewA.xib
+++ b/TestXIB/ViewA.xib
@@ -41,7 +41,7 @@
                         <constraint firstAttribute="width" constant="303" id="syC-Y5-XvW"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lsz-yR-1uQ" userLabel="blueView">
+                <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="Lsz-yR-1uQ" userLabel="blueView">
                     <rect key="frame" x="67" y="491" width="240" height="128"/>
                     <color key="backgroundColor" red="0.30746284499999998" green="0.67189423989999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
@@ -49,6 +49,11 @@
                         <constraint firstAttribute="width" constant="240" id="vTb-7n-aX6"/>
                     </constraints>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TdX-0Y-X2a">
+                    <rect key="frame" x="164" y="424" width="46" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="Button"/>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
